intermediate version - also using pi3two as dev machine

--- a/wifi-connect/Dockerfile
+++ b/wifi-connect/Dockerfile
@@ -4,6 +4,14 @@ RUN apt-get update && \
     apt-get install -y dnsmasq wireless-tools network-manager curl \
      && apt-get clean && rm -rf /var/lib/apt/lists/*
 
+WORKDIR /usr/src/app
+
+# https://github.com/balena-os/wifi-connect/releases/download/v4.4.0/wifi-connect-v4.4.0-linux-amd64.tar.gz
+RUN curl -Ls "https://github.com/balena-os/wifi-connect/releases/download/v4.4.0/wifi-connect-v4.4.0-linux-amd64.tar.gz" \
+  | tar -xvz -C  /usr/src/app/
+
+COPY scripts/start.sh .
+
 # https://github.com/balena-os/wifi-connect/releases/download/v4.4.0/wifi-connect-v4.4.0-linux-amd64.tar.gz
 
 CMD sleep 36000
