first draft working version

--- a/wifi-connect/Dockerfile
+++ b/wifi-connect/Dockerfile
@@ -1,17 +1,19 @@
-FROM debian:trixie-20230919
+FROM debian:buster-20230919
 
 RUN apt-get update && \
-    apt-get install -y dnsmasq wireless-tools network-manager curl \
+    apt-get install -y dnsmasq wireless-tools network-manager curl wget \
      && apt-get clean && rm -rf /var/lib/apt/lists/*
 
 WORKDIR /usr/src/app
 
 # https://github.com/balena-os/wifi-connect/releases/download/v4.4.0/wifi-connect-v4.4.0-linux-amd64.tar.gz
-RUN curl -Ls "https://github.com/balena-os/wifi-connect/releases/download/v4.4.0/wifi-connect-v4.4.0-linux-amd64.tar.gz" \
-  | tar -xvz -C  /usr/src/app/
+
+ARG BALENA_ARCH="armv7hf"
+RUN curl -Ls https://github.com/balena-os/wifi-connect/releases/download/v4.4.4/wifi-connect-v4.4.4-linux-${BALENA_ARCH}.tar.gz \
+ | tar -xvz -C  /usr/src/app/
 
 COPY scripts/start.sh .
 
 # https://github.com/balena-os/wifi-connect/releases/download/v4.4.0/wifi-connect-v4.4.0-linux-amd64.tar.gz
 
-CMD sleep 36000
+CMD ["bash", "start.sh"]
