--- a/wifi-connect/Dockerfile
+++ b/wifi-connect/Dockerfile
@@ -6,10 +6,13 @@ RUN apt-get update && \
 
 WORKDIR /usr/src/app
 
-ARG BALENA_ARCH="armv7hf"
-RUN curl -Ls https://github.com/balena-os/wifi-connect/releases/download/v4.4.4/wifi-connect-v4.4.4-linux-${BALENA_ARCH}.tar.gz \
- | tar -xvz -C  /usr/src/app/
+ARG BALENA_ARCH=armv7hf
+
+RUN wget https://github.com/balena-os/wifi-connect/releases/download/v4.4.4/wifi-connect-v4.4.4-linux-${BALENA_ARCH}.tar.gz \
+    && tar -xvf wifi-connect-*.tar.gz \
+    && rm wifi-connect-*.tar.gz
 
 COPY scripts/start.sh .
 
+#CMD sleep 36000
 CMD ["bash", "start.sh"]
