--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,8 +6,15 @@ services:
     container_name: wifi-connect
     build: wifi-connect
     network_mode: "host"
-    privileged: true
-    #cap_add:
-    #  - NET_ADMIN
+    privileged: true     # this is needed for dnsmasq
+    restart: unless-stopped
     volumes:
+     # this is needed for nmcli
      - /run/dbus/system_bus_socket:/run/dbus/system_bus_socket
+     # this is needed for wifi-connect executable
+     - /run/dbus/system_bus_socket:/host/run/dbus/system_bus_socket
+    environment:
+      - PORTAL_SSID=wifi-connect
+      - PORTAL_LISTENING_PORT=1000
+      - PORTAL_GATEWAY=192.168.50.1
+      - PORTAL_DHCP_RANGE=192.168.50.2,192.168.50.254
