--- a/wifi-connect/Dockerfile
+++ b/wifi-connect/Dockerfile
@@ -6,9 +6,12 @@ RUN apt-get update && \
 
 WORKDIR /usr/src/app
 
-ARG BALENA_ARCH=armv7hf
-
-RUN wget https://github.com/balena-os/wifi-connect/releases/download/v4.4.4/wifi-connect-v4.4.4-linux-${BALENA_ARCH}.tar.gz \
+# possible values for BALENA_ARCH: armv7hf amd64 aarch64
+RUN ARCH=`uname -m` && \
+    if   [ "$ARCH" == "x86_64" ]; then BALENA_ARCH=amd64; \
+    elif [ "$ARCH" == "armv7l" ]; then BALENA_ARCH=armv7hf;\
+    else                               BALENA_ARCH=aarch64; fi && \
+    wget https://github.com/balena-os/wifi-connect/releases/download/v4.4.4/wifi-connect-v4.4.4-linux-${BALENA_ARCH}.tar.gz \
     && tar -xvf wifi-connect-*.tar.gz \
     && rm wifi-connect-*.tar.gz
 
